// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`JSONSchemaViewer - Boolean type test 0 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          boolean
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        />
      </div>
    </div>
  </details>
</DocumentFragment>
`;

exports[`JSONSchemaViewer - Boolean type test 1 1`] = `
<DocumentFragment>
  <details
    class="json-schema-viewer"
    open=""
  >
    <summary>
      <strong>
        Schema
      </strong>
    </summary>
    <div>
      <div>
        <strong>
          type
        </strong>
         : 
        <span
          style="opacity: 0.6;"
        >
          boolean
        </span>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          <div>
            <strong>
              Possible values :
            </strong>
             
            <ul>
              <li>
                <code>
                  true
                </code>
              </li>
              <li>
                <code>
                  false
                </code>
              </li>
            </ul>
          </div>
          <div>
            <strong>
              Default value :
            </strong>
             
            <code>
              false
            </code>
          </div>
        </div>
        <div
          style="margin-top: var(--ifm-table-cell-padding);"
        >
          Boolean without the explicit type
        </div>
      </div>
    </div>
  </details>
</DocumentFragment>
`;
